# On-Off-Monitor-Desktop

./: .gitignore  App.py  Installer.py  LiveStatus.py  OnOffMonitor.py  README.md  __main__.py  pyproject.toml  setup.py
On-Off-Monitor-Desktop/: __init__.py  __main__.py
OnOffMonitorDesktop/: OnOffMonitor.py  __init__.py  __main__.py
