[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "OnOffMonitorDesktop"
authors = [{name = "Joe Greaves", email = "joegreaves@outlook.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = "~=3.7"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/joegreaves17/on-off-monitor-desktop"